--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
 	<property environment="env" />
 	<property name="src.dir" value="${basedir}/src" />
 	<property name="jboss.home" value="${env.JBOSS_HOME}" />
-	<property name="jboss.server.config" value="node1" />
+	<property name="jboss.server.config" value="default" />
 	<property name="build.dir" value="${basedir}/build" />
 	<property name="build.classes.dir" value="${build.dir}/classes" />
 	<property name="build.artifact" value="simple-stateless.jar" />
@@ -62,7 +62,7 @@
 				<include name="META-INF/*.xml" />
 			</fileset>
 		</jar>
-		<copy file="build/${build.artifact}" todir="${jboss.home}/server/${jboss.server.config}/farm" />
+		<copy file="build/${build.artifact}" todir="${jboss.home}/server/${jboss.server.config}/deploy" />
 	</target>
 
 	<target name="run.client.slsb" depends="ejbjar">
@@ -88,6 +88,14 @@
 			<classpath refid="classpath" />
 		</java>
 	</target>
+	
+	<target name="run.client.entity">
+			<echo message="Classpath = ${build.classpath}">
+			</echo>
+			<java classname="com.sample.ejb3.session.client.EntityClient" fork="yes" dir=".">
+				<classpath refid="classpath" />
+			</java>
+		</target>
 
 	<target name="run.client.all">
 		<echo>START Stateless Session Bean Tests</echo>
